--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script>
     var iderioja_config = {
       "capa_geojson": [
-        {"nombre": "Municipios de La Rioja",
+        {"nombre": "MUNICIPIOS DE LA RIOJA",
          "url": "https://github.com/agarvicu/Prueba_git/blob/master/municipios.json",
           "estilo": {
             "color": "#ff0000",
