actualizada url json

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     var iderioja_config = {
       "capa_geojson": [
         {"nombre": "Municipios de La Rioja 2018",
-         "url": "https://github.com/agarvicu/Prueba_git/blob/master/municipios.json",
+         "url": "https://raw.githubusercontent.com/agarvicu/Prueba_git/master/municipios.json",
           "estilo": {
             "color": "#ff0000",
             "weight": 1,
